# captains-log

./: .gitignore  ARCHITECTURE.md  BUGS.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  TESTING.md  pyproject.toml
Captain's Log.app/Contents/: Info.plist
Captain's Log.app/Contents/MacOS/: CaptainsLog
FocusWidget/: FocusWidgetApp.swift  Info.plist  build.sh
MenuBarApp/: CalendarManager.swift  CalendarModels.swift  CalendarProvider.swift  CaptainsLogMenuBar  CaptainsLogMenuBar.swift  EventKitProvider.swift  Info.plist  build.sh
backend/: database.py  main.py  models.py  requirements.txt
frontend/: next.config.ts  package-lock.json  package.json  supabase-schema.sql
frontend/public/: setup.html
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/components/: device-setup.tsx
frontend/src/lib/: api.ts  security.ts  supabase-auth.ts  supabase-server.ts  supabase.ts  types.ts
frontend/supabase-migrations/: 001_add_user_email.sql
homebrew/Formula/: captains-log.rb
installer/: README.md  install.sh  uninstall.sh
resources/launchd/: com.captainslog.daemon.plist
scripts/: captains-log.1m.sh  daemon-watchdog.sh  install.sh
src/captains_log/: __init__.py  __main__.py
src/captains_log/ai/: __init__.py  batch_processor.py  claude_client.py  prompts.py  schemas.py  screenshot_analyzer.py  work_analyzer.py
src/captains_log/cli/: __init__.py  install.py  main.py
src/captains_log/core/: __init__.py  config.py  orchestrator.py  permissions.py
src/captains_log/focus/: __init__.py  activity_matcher.py  goal_tracker.py  pomodoro.py  productivity_goals.py
(+79 files in other folders)
